--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
 
     <string name="item_title">Title</string>
     <string name="item_content">Description</string>
+    <string name="item_tags">Tags</string>
 </resources>
